# pdfchat

./: .gitignore  pyproject.toml  talk_to_me.ipynb
Data/: S08_question_answer_pairs.csv
